--- a/soul-bootstrap/pom.xml
+++ b/soul-bootstrap/pom.xml
@@ -72,15 +72,14 @@
 
         <!--dubbo start-->
         <dependency>
-            <groupId>org.apache.dubbo</groupId>
+            <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
-            <version>2.7.5</version>
         </dependency>
 
         <dependency>
-            <groupId>org.apache.dubbo</groupId>
+            <groupId>com.alibaba</groupId>
             <artifactId>dubbo-registry-nacos</artifactId>
-            <version>2.7.5</version>
+            <version>2.6.6</version>
         </dependency>
 
         <!-- Keep latest Nacos client version -->
