--- a/soul-client/soul-client-apache-dubbo/pom.xml
+++ b/soul-client/soul-client-apache-dubbo/pom.xml
@@ -33,9 +33,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.dubbo</groupId>
+            <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
-            <version>2.7.5</version>
             <scope>provided</scope>
         </dependency>
 
