--- a/soul-test/soul-test-dubbo/soul-test-dubbo-service/pom.xml
+++ b/soul-test/soul-test-dubbo/soul-test-dubbo-service/pom.xml
@@ -64,17 +64,16 @@
 
         <!-- Dubbo dependency -->
         <dependency>
-            <groupId>org.apache.dubbo</groupId>
+            <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
-            <version>2.7.5</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.dubbo/dubbo-registry-nacos -->
         <!-- Dubbo Nacos registry dependency -->
         <dependency>
-            <groupId>org.apache.dubbo</groupId>
+            <groupId>com.alibaba</groupId>
             <artifactId>dubbo-registry-nacos</artifactId>
-            <version>2.7.5</version>
+            <version>2.6.6</version>
         </dependency>
 
         <!-- Keep latest Nacos client version -->
