--- a/soul-web/pom.xml
+++ b/soul-web/pom.xml
@@ -116,7 +116,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.dubbo</groupId>
+            <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
             <scope>provided</scope>
         </dependency>
